update list styles

--- a/css/styles.css
+++ b/css/styles.css
@@ -139,6 +139,17 @@ input:-moz-placeholder { /* Firefox 18- */
  	color: #bbb;
 }
 
+.invited-list li {
+	list-style: none;
+	font-size: .9em;
+	padding-bottom: 12px;
+}
+
+.invited-list li span {
+	color: #a4a4a4;
+	margin-left: 10px;
+}
+
 
 @media screen and (min-device-width: 700px) { 
   	.blackout h4 {
